md: based structure, cards and schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,9 @@
-{}
+{
+  "typescript.tsserver.maxTsServerMemory": 2048,
+  "vetur.enabled": false,
+  "volar.enable": true,
+  "files.watcherExclude": {
+    "**/node_modules/**": true,
+    "**/dist/**": true
+  }
+}
