--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "NUXTMD",
   "type": "module",
   "private": true,
   "scripts": {
@@ -11,16 +11,27 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.9.0",
+    "@nuxt/content": "^3.7.1",
     "@nuxt/eslint": "1.9.0",
     "@nuxt/image": "1.11.0",
     "@nuxt/ui": "4.0.1",
     "@nuxtjs/google-fonts": "3.2.0",
+    "@nuxtjs/seo": "3.2.2",
+    "@nuxtjs/sitemap": "7.4.7",
+    "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.14",
+    "better-sqlite3": "^12.4.1",
+    "dayjs": "^1.11.18",
     "eslint": "^9.36.0",
+    "fusejs": "^1.4.3",
     "nuxt": "^4.1.2",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "vue-tsc": "^3.1.0"
   }
 }
