content/completed: paging for categories + articles, top categories popover menu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "files.watcherExclude": {
     "**/node_modules/**": true,
     "**/dist/**": true
-  }
+  },
+  "vue3snippets.enable-compile-vue-file-on-did-save-code": true
 }
