--- a/.github/workflows/studio.yml
+++ b/.github/workflows/studio.yml
@@ -1,4 +1,3 @@
-
 name: studio-nuxt-build
 run-name: studio nuxt build
 
@@ -6,7 +5,7 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches:
-      - 'main'
+      - "main"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -52,7 +51,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          version: ${{ matrix.node }}
+          node-version: ${{ matrix.node }}
           cache: ${{ steps.pkgman.outputs.cache }}
 
       - name: Install dependencies
@@ -63,7 +62,6 @@ jobs:
         env:
           NITRO_PRESET: github_pages
           NUXT_CONTENT_PREVIEW_API: https://api.nuxt.studio
-          
 
       # Deployment job
       - name: Deploy 🚀
